All artists are displayed now on '/artists' routing path
