# iMusic/ClientApp/src/app/core/swagger/api/api.ts
@@ -1,3 +1,5 @@
+export * from './artist.service';
+import { ArtistService } from './artist.service';
 export * from './song.service';
 import { SongService } from './song.service';
-export const APIS = [SongService];
+export const APIS = [ArtistService, SongService];
