# iMusic/DataModel/Repository/Implementation/ArtistRepository.cs
@@ -1,4 +1,5 @@
 ﻿using System;
+using System.Collections.Generic;
 using System.Linq;
 using iMusic.DataModel.Context;
 using iMusic.DataModel.Models;
@@ -9,6 +10,11 @@ namespace iMusic.DataModel.Repository.Implementation
     public class ArtistRepository : GenericRepository<Artist>, IArtistRepository
     {
         public ArtistRepository(AppDbContext context) : base(context) { }
+
+        public List<Artist> GetAll()
+        {
+            return _context.Artists.ToList();
+        }
 
         public Artist GetByName(string name)
         {
